@startuml
hide empty members

GnssInterfaceImpl : GnssInterfaceImpl() noexcept
GnssInterfaceImpl : virtual ReturnCode open(const char* serial_port, long baudrate) noexcept
GnssInterfaceImpl : virtual bool is_open() noexcept
GnssInterfaceImpl : virtual ReturnCode close() noexcept
GnssInterfaceImpl : virtual ReturnCode take_next(GPGGAData& gpgga) noexcept
GnssInterfaceImpl : virtual ReturnCode wait_for_data(NMEA0183DataKindMask data_mask, std::chrono::milliseconds timeout) noexcept

class FixedSizeQueue<typename T, int max_size, typename Container = std::deque<T>>

class SerialInterface<asio::serial_port>

GnssInterfaceImpl o-- "n" FixedSizeQueue
GnssInterfaceImpl o-- "1" SerialInterface
@enduml
